test/expected/cli/shitbox_calc.out
=== precedence ===
14
=== parentheses and power ===
27
=== 128-bit in the default mood ===
1267650600228229401496703205376
=== variable read ===
42
=== located parse error ===
shit: 1:4: error: Unexpected character.
     1 |  1 +
       |     ^~ here.
=== located division by zero ===
shit: 1:6: error: Division by zero.
     1 |  5 / 0
       |       ^~ here.
=== no expression ===
shit: 1:1: error: calc: Not enough arguments.
     1 |  shitbox calc
       |  ^~~~~~~~~~~~ here.
shit: note: Try `calc --help` for more info.
rc=2
